--- a/src/hyperiond/CMakeLists.txt
+++ b/src/hyperiond/CMakeLists.txt
@@ -5,8 +5,11 @@ add_executable(hyperiond
 target_link_libraries(hyperiond
 		bootsequence
 		hyperion
-		dispmanx-grabber
 		xbmcvideochecker
 		jsonserver
 		protoserver
 		boblightserver)
+
+if (ENABLE_DISPMANX)
+	target_link_libraries(hyperiond dispmanx-grabber)
+endif (ENABLE_DISPMANX)
