Fix typo in HyperCon knight rider
Former-commit-id: 43ce527d623d31c71f9b2edb9fc7aae6428fa841

--- a/config/hyperion.config.json
+++ b/config/hyperion.config.json
@@ -339,7 +339,7 @@
 	},
 
 	/// The boot-sequence configuration, contains the following items: 
-	///  * type        : The type of the boot-sequence ('rainbow', 'knight_rider', 'none') 
+	///  * type        : The type of the boot-sequence ('rainbow', 'knightrider', 'none') 
 	///  * duration_ms : The length of the boot-sequence [ms]
 	"bootsequence" :
 	{
