Added small test to parse some parts of the json file
Former-commit-id: 2ecdb7d12289d63a5fde051262162d01d768c328

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -41,5 +41,9 @@ add_executable(test_blackborderprocessor
 target_link_libraries(test_blackborderprocessor
 		hyperion)
 
+add_executable(test_qregexp TestQRegExp.cpp)
+target_link_libraries(test_qregexp
+		${QT_LIBRARIES})
+
 add_executable(spidev_test spidev_test.c)
 add_executable(gpio2spi switchPinCtrl.c)
