--- a/libsrc/hyperion/CMakeLists.txt
+++ b/libsrc/hyperion/CMakeLists.txt
@@ -77,6 +77,7 @@ add_library(hyperion
 		${Hyperion_SOURCES}
 		${Hyperion_RESOURCES_RCC}
 )
+message("{QT_LIBRARIES} = ${QT_LIBRARIES}")
 
 target_link_libraries(hyperion
 		hyperion-utils
