Added skeleton for effect engine development
Former-commit-id: e1fb69fd4de4b8968075660e3ba7f7add021c152

--- a/src/hyperiond/CMakeLists.txt
+++ b/src/hyperiond/CMakeLists.txt
@@ -6,6 +6,7 @@ target_link_libraries(hyperiond
 		bootsequence
 		hyperion
 		xbmcvideochecker
+		effectengine
 		jsonserver
 		protoserver
 		boblightserver)
