--- a/libsrc/CMakeLists.txt
+++ b/libsrc/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(protoserver)
 add_subdirectory(boblightserver)
 add_subdirectory(utils)
 add_subdirectory(xbmcvideochecker)
+add_subdirectory(effectengine)
 
 if (ENABLE_DISPMANX)
 	add_subdirectory(dispmanx-grabber)
