Removed Lightpack based on hidapi from build (not working)
Former-commit-id: b3882807daf5993073a7af811db50fe3d0a45c28

--- a/libsrc/hyperion/CMakeLists.txt
+++ b/libsrc/hyperion/CMakeLists.txt
@@ -4,9 +4,14 @@ SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/hyperion)
 SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/hyperion)
 
 #add libusb and pthreads (required for the Lighpack usb device)
+#find_package(UDev REQUIRED)
 find_package(libusb-1.0 REQUIRED)
+find_package(Threads REQUIRED)
+#find_package(UDev REQUIRED)
 
 include_directories(
+	../../include/hidapi
+#	${UDEV_INCLUDE_DIR}
 	${LIBUSB_1_INCLUDE_DIRS}) # for Lightpack device
 
 # Group the headers that go through the MOC compiler
@@ -37,7 +42,6 @@ SET(Hyperion_HEADERS
 		${CURRENT_SOURCE_DIR}/device/LedDeviceLpd8806.h
 		${CURRENT_SOURCE_DIR}/device/LedDeviceLightpack.h
 		${CURRENT_SOURCE_DIR}/device/LedDeviceMultiLightpack.h
-		${CURRENT_SOURCE_DIR}/device/LedDeviceLightpack-hidapi.h
 )
 
 SET(Hyperion_SOURCES
@@ -62,7 +66,6 @@ SET(Hyperion_SOURCES
 		${CURRENT_SOURCE_DIR}/device/LedDeviceAdalight.cpp
 		${CURRENT_SOURCE_DIR}/device/LedDeviceLightpack.cpp
 		${CURRENT_SOURCE_DIR}/device/LedDeviceMultiLightpack.cpp
-		${CURRENT_SOURCE_DIR}/device/LedDeviceLightpack-hidapi.cpp
 )
 
 set(Hyperion_RESOURCES
@@ -84,6 +87,8 @@ add_library(hyperion
 target_link_libraries(hyperion
 		hyperion-utils
 		serialport
-		hidapi-libusb
+		${LIBUSB_1_LIBRARIES} #apt-get install libusb-1.0-0-dev
+		${CMAKE_THREAD_LIBS_INIT}
+#		${UDEV_LIBRARIES} # apt-get install libudev-dev
 		${QT_LIBRARIES}
 )
