Switch of the preference for static libraries
Former-commit-id: 6b9cf3a9c437fef211a8d8772cf70a9f5788402b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ include_directories(${CMAKE_SOURCE_DIR}/dependencies/include)
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
 # Prefer static linking over dynamic
-set(CMAKE_FIND_LIBRARY_SUFFIXES ".a;.so")
+#set(CMAKE_FIND_LIBRARY_SUFFIXES ".a;.so")
 
 set(CMAKE_BUILD_TYPE "Release")
 
