Moved effect configurations from the config file to effect directory
Former-commit-id: b8db13f25b93a0007adf613f0310a1cfbb6b8224

--- a/libsrc/effectengine/CMakeLists.txt
+++ b/libsrc/effectengine/CMakeLists.txt
@@ -22,12 +22,18 @@ SET(EffectEngineSOURCES
 		${CURRENT_SOURCE_DIR}/Effect.cpp
 )
 
+
+set(EffectEngine_RESOURCES ${CURRENT_SOURCE_DIR}/EffectEngine.qrc)
+
 QT4_WRAP_CPP(EffectEngineHEADERS_MOC ${EffectEngineQT_HEADERS})
+
+qt4_add_resources(EffectEngine_RESOURCES_RCC ${EffectEngine_RESOURCES} OPTIONS "-no-compress")
 
 add_library(effectengine
 		${EffectEngineHEADERS}
 		${EffectEngineQT_HEADERS}
 		${EffectEngineHEADERS_MOC}
+		${EffectEngine_RESOURCES_RCC}
 		${EffectEngineSOURCES}
 )
 
