Added log statement for failure to start boot sequence. Corrected name in default configuration file of bootsequence.
Former-commit-id: 7a303ca080f11e2bb5d72da039b9b1c1b44ddcdb

--- a/config/hyperion.config.json
+++ b/config/hyperion.config.json
@@ -364,7 +364,8 @@
 			"/opt/hyperion/effects"
 		]
 	},
-	"Bootsequence" :
+
+	"bootsequence" :
 	{
 		"effect" : "Rainbow swirl fast",
 		"duration_ms" : 3000
