Moved all devices to separate library and added 'Factory' for device creation.
Former-commit-id: 26cab1b85b00406240689ad9c1018f0307028fe4

--- a/libsrc/hyperion/CMakeLists.txt
+++ b/libsrc/hyperion/CMakeLists.txt
@@ -3,27 +3,17 @@
 SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/hyperion)
 SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/libsrc/hyperion)
 
-#add libusb and pthreads (required for the Lighpack usb device)
-find_package(libusb-1.0 REQUIRED)
-find_package(Threads REQUIRED)
-
-include_directories(
-	../../include/hidapi
-	${LIBUSB_1_INCLUDE_DIRS}) # for Lightpack device
-
 # Group the headers that go through the MOC compiler
 SET(Hyperion_QT_HEADERS
 		${CURRENT_HEADER_DIR}/Hyperion.h
 
 		${CURRENT_SOURCE_DIR}/LinearColorSmoothing.h
-		${CURRENT_SOURCE_DIR}/device/LedDeviceAdalight.h
 )
 
 SET(Hyperion_HEADERS
 		${CURRENT_HEADER_DIR}/ImageProcessor.h
 		${CURRENT_HEADER_DIR}/ImageProcessorFactory.h
 		${CURRENT_HEADER_DIR}/ImageToLedsMap.h
-		${CURRENT_HEADER_DIR}/LedDevice.h
 		${CURRENT_HEADER_DIR}/LedString.h
 		${CURRENT_HEADER_DIR}/PriorityMuxer.h
 
@@ -31,18 +21,6 @@ SET(Hyperion_HEADERS
 		${CURRENT_HEADER_DIR}/BlackBorderProcessor.h
 
 		${CURRENT_SOURCE_DIR}/MultiColorTransform.h
-
-		${CURRENT_SOURCE_DIR}/device/LedSpiDevice.h
-		${CURRENT_SOURCE_DIR}/device/LedRs232Device.h
-		${CURRENT_SOURCE_DIR}/device/LedDeviceTest.h
-		${CURRENT_SOURCE_DIR}/device/LedDeviceSedu.h
-		${CURRENT_SOURCE_DIR}/device/LedDeviceWs2801.h
-		${CURRENT_SOURCE_DIR}/device/LedDeviceWs2811.h
-		${CURRENT_SOURCE_DIR}/device/LedDeviceLpd6803.h
-		${CURRENT_SOURCE_DIR}/device/LedDeviceLpd8806.h
-		${CURRENT_SOURCE_DIR}/device/LedDeviceLightpack.h
-		${CURRENT_SOURCE_DIR}/device/LedDevicePaintpack.h
-		${CURRENT_SOURCE_DIR}/device/LedDeviceMultiLightpack.h
 )
 
 SET(Hyperion_SOURCES
@@ -57,19 +35,6 @@ SET(Hyperion_SOURCES
 		${CURRENT_SOURCE_DIR}/ImageToLedsMap.cpp
 		${CURRENT_SOURCE_DIR}/MultiColorTransform.cpp
 		${CURRENT_SOURCE_DIR}/LinearColorSmoothing.cpp
-
-		${CURRENT_SOURCE_DIR}/device/LedSpiDevice.cpp
-		${CURRENT_SOURCE_DIR}/device/LedRs232Device.cpp
-		${CURRENT_SOURCE_DIR}/device/LedDeviceSedu.cpp
-		${CURRENT_SOURCE_DIR}/device/LedDeviceTest.cpp
-		${CURRENT_SOURCE_DIR}/device/LedDeviceWs2801.cpp
-		${CURRENT_SOURCE_DIR}/device/LedDeviceWs2811.cpp
-		${CURRENT_SOURCE_DIR}/device/LedDeviceLpd6803.cpp
-		${CURRENT_SOURCE_DIR}/device/LedDeviceLpd8806.cpp
-		${CURRENT_SOURCE_DIR}/device/LedDeviceAdalight.cpp
-		${CURRENT_SOURCE_DIR}/device/LedDeviceLightpack.cpp
-		${CURRENT_SOURCE_DIR}/device/LedDevicePaintpack.cpp
-		${CURRENT_SOURCE_DIR}/device/LedDeviceMultiLightpack.cpp
 )
 
 set(Hyperion_RESOURCES
@@ -78,7 +43,7 @@ set(Hyperion_RESOURCES
 
 QT4_WRAP_CPP(Hyperion_HEADERS_MOC ${Hyperion_QT_HEADERS})
 
-qt4_add_resources(Hyperion_RESOURCES_RCC ${Hyperion_RESOURCES} OPTIONS "-no-compress")
+QT4_ADD_RESOURCES(Hyperion_RESOURCES_RCC ${Hyperion_RESOURCES} OPTIONS "-no-compress")
 
 add_library(hyperion
 		${Hyperion_HEADERS}
@@ -90,10 +55,9 @@ add_library(hyperion
 
 target_link_libraries(hyperion
 		hyperion-utils
+		leddevice
 		effectengine
 		hidapi-libusb
 		serialport
-		${LIBUSB_1_LIBRARIES} #apt-get install libusb-1.0-0-dev
-		${CMAKE_THREAD_LIBS_INIT}
 		${QT_LIBRARIES}
 )
