--- a/libsrc/CMakeLists.txt
+++ b/libsrc/CMakeLists.txt
@@ -7,6 +7,7 @@ add_subdirectory(hyperion)
 add_subdirectory(jsonserver)
 add_subdirectory(protoserver)
 add_subdirectory(boblightserver)
+add_subdirectory(leddevice)
 add_subdirectory(utils)
 add_subdirectory(xbmcvideochecker)
 add_subdirectory(effectengine)
