Create test program for creating screenshot with Qt
Former-commit-id: 7e665ef0cd63f66c34ba2b441cafe34689358f3a

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -48,3 +48,7 @@ target_link_libraries(test_blackborderprocessor
 add_executable(test_qregexp TestQRegExp.cpp)
 target_link_libraries(test_qregexp
 		${QT_LIBRARIES})
+
+add_executable(test_qtscreenshot TestQtScreenshot.cpp)
+target_link_libraries(test_qtscreenshot
+		${QT_LIBRARIES})
