--- a/config/hyperion_x86.config.json
+++ b/config/hyperion_x86.config.json
@@ -144,6 +144,206 @@
 			"index" : 9,
 			"hscan" : { "minimum" : 0.0000, "maximum" : 0.0500 },
 			"vscan" : { "minimum" : 0.8571, "maximum" : 1.0000 }
+		},
+		{
+			"index" : 10,
+			"hscan" : { "minimum" : 0.0000, "maximum" : 0.0500 },
+			"vscan" : { "minimum" : 0.7143, "maximum" : 0.8571 }
+		},
+		{
+			"index" : 11,
+			"hscan" : { "minimum" : 0.0000, "maximum" : 0.0500 },
+			"vscan" : { "minimum" : 0.5714, "maximum" : 0.7143 }
+		},
+		{
+			"index" : 12,
+			"hscan" : { "minimum" : 0.0000, "maximum" : 0.0500 },
+			"vscan" : { "minimum" : 0.4286, "maximum" : 0.5714 }
+		},
+		{
+			"index" : 13,
+			"hscan" : { "minimum" : 0.0000, "maximum" : 0.0500 },
+			"vscan" : { "minimum" : 0.2857, "maximum" : 0.4286 }
+		},
+		{
+			"index" : 14,
+			"hscan" : { "minimum" : 0.0000, "maximum" : 0.0500 },
+			"vscan" : { "minimum" : 0.1429, "maximum" : 0.2857 }
+		},
+		{
+			"index" : 15,
+			"hscan" : { "minimum" : 0.0000, "maximum" : 0.0500 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.1429 }
+		},
+		{
+			"index" : 16,
+			"hscan" : { "minimum" : 0.0000, "maximum" : 0.0500 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 17,
+			"hscan" : { "minimum" : 0.0000, "maximum" : 0.0625 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 18,
+			"hscan" : { "minimum" : 0.0625, "maximum" : 0.1250 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 19,
+			"hscan" : { "minimum" : 0.1250, "maximum" : 0.1875 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 20,
+			"hscan" : { "minimum" : 0.1875, "maximum" : 0.2500 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 21,
+			"hscan" : { "minimum" : 0.2500, "maximum" : 0.3125 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 22,
+			"hscan" : { "minimum" : 0.3125, "maximum" : 0.3750 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 23,
+			"hscan" : { "minimum" : 0.3750, "maximum" : 0.4375 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 24,
+			"hscan" : { "minimum" : 0.4375, "maximum" : 0.5000 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 25,
+			"hscan" : { "minimum" : 0.5000, "maximum" : 0.5625 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 26,
+			"hscan" : { "minimum" : 0.5625, "maximum" : 0.6250 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 27,
+			"hscan" : { "minimum" : 0.6250, "maximum" : 0.6875 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 28,
+			"hscan" : { "minimum" : 0.6875, "maximum" : 0.7500 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 29,
+			"hscan" : { "minimum" : 0.7500, "maximum" : 0.8125 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 30,
+			"hscan" : { "minimum" : 0.8125, "maximum" : 0.8750 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 31,
+			"hscan" : { "minimum" : 0.8750, "maximum" : 0.9375 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 32,
+			"hscan" : { "minimum" : 0.9375, "maximum" : 1.0000 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 33,
+			"hscan" : { "minimum" : 0.9500, "maximum" : 1.0000 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.0800 }
+		},
+		{
+			"index" : 34,
+			"hscan" : { "minimum" : 0.9500, "maximum" : 1.0000 },
+			"vscan" : { "minimum" : 0.0000, "maximum" : 0.1429 }
+		},
+		{
+			"index" : 35,
+			"hscan" : { "minimum" : 0.9500, "maximum" : 1.0000 },
+			"vscan" : { "minimum" : 0.1429, "maximum" : 0.2857 }
+		},
+		{
+			"index" : 36,
+			"hscan" : { "minimum" : 0.9500, "maximum" : 1.0000 },
+			"vscan" : { "minimum" : 0.2857, "maximum" : 0.4286 }
+		},
+		{
+			"index" : 37,
+			"hscan" : { "minimum" : 0.9500, "maximum" : 1.0000 },
+			"vscan" : { "minimum" : 0.4286, "maximum" : 0.5714 }
+		},
+		{
+			"index" : 38,
+			"hscan" : { "minimum" : 0.9500, "maximum" : 1.0000 },
+			"vscan" : { "minimum" : 0.5714, "maximum" : 0.7143 }
+		},
+		{
+			"index" : 39,
+			"hscan" : { "minimum" : 0.9500, "maximum" : 1.0000 },
+			"vscan" : { "minimum" : 0.7143, "maximum" : 0.8571 }
+		},
+		{
+			"index" : 40,
+			"hscan" : { "minimum" : 0.9500, "maximum" : 1.0000 },
+			"vscan" : { "minimum" : 0.8571, "maximum" : 1.0000 }
+		},
+		{
+			"index" : 41,
+			"hscan" : { "minimum" : 0.9500, "maximum" : 1.0000 },
+			"vscan" : { "minimum" : 0.9200, "maximum" : 1.0000 }
+		},
+		{
+			"index" : 42,
+			"hscan" : { "minimum" : 0.9375, "maximum" : 1.0000 },
+			"vscan" : { "minimum" : 0.9200, "maximum" : 1.0000 }
+		},
+		{
+			"index" : 43,
+			"hscan" : { "minimum" : 0.8750, "maximum" : 0.9375 },
+			"vscan" : { "minimum" : 0.9200, "maximum" : 1.0000 }
+		},
+		{
+			"index" : 44,
+			"hscan" : { "minimum" : 0.8125, "maximum" : 0.8750 },
+			"vscan" : { "minimum" : 0.9200, "maximum" : 1.0000 }
+		},
+		{
+			"index" : 45,
+			"hscan" : { "minimum" : 0.7500, "maximum" : 0.8125 },
+			"vscan" : { "minimum" : 0.9200, "maximum" : 1.0000 }
+		},
+		{
+			"index" : 46,
+			"hscan" : { "minimum" : 0.6875, "maximum" : 0.7500 },
+			"vscan" : { "minimum" : 0.9200, "maximum" : 1.0000 }
+		},
+		{
+			"index" : 47,
+			"hscan" : { "minimum" : 0.6250, "maximum" : 0.6875 },
+			"vscan" : { "minimum" : 0.9200, "maximum" : 1.0000 }
+		},
+		{
+			"index" : 48,
+			"hscan" : { "minimum" : 0.5625, "maximum" : 0.6250 },
+			"vscan" : { "minimum" : 0.9200, "maximum" : 1.0000 }
+		},
+		{
+			"index" : 49,
+			"hscan" : { "minimum" : 0.5000, "maximum" : 0.5625 },
+			"vscan" : { "minimum" : 0.9200, "maximum" : 1.0000 }
 		}
 	],
 
@@ -169,34 +369,6 @@
 	{
 		"effect" : "Rainbow swirl fast",
 		"duration_ms" : 3000
-	},
-
-	///  The configuration for the frame-grabber, contains the following items: 
-	///   * width        : The width of the grabbed frames [pixels]
-	///   * height       : The height of the grabbed frames [pixels]
-	///   * frequency_Hz : The frequency of the frame grab [Hz]
-//	"framegrabber" : 
-//	{
-//		"width" : 64,
-//		"height" : 64,
-//		"frequency_Hz" : 10.0
-//	},
-
-	/// The configuration of the XBMC connection used to enable and disable the frame-grabber. Contains the following fields: 
-	///  * xbmcAddress  : The IP address of the XBMC-host
-	///  * xbmcTcpPort  : The TCP-port of the XBMC-server
-	///  * grabVideo    : Flag indicating that the frame-grabber is on(true) during video playback
-	///  * grabPictures : Flag indicating that the frame-grabber is on(true) during picture show
-	///  * grabAudio    : Flag indicating that the frame-grabber is on(true) during audio playback
-	///  * grabMenu     : Flag indicating that the frame-grabber is on(true) in the XBMC menu
-	"xbmcVideoChecker" : 
-	{
-		"xbmcAddress" : "127.0.0.1",
-		"xbmcTcpPort" : 9090,
-		"grabVideo" : true,
-		"grabPictures" : true,
-		"grabAudio" : true,
-		"grabMenu" : false
 	},
 
 	/// The configuration of the Json server which enables the json remote interface
