A test program that writes green/red/blue to ws2812b at 4MHz
Former-commit-id: 2fa36165086f5bef99eaca387f6abeed8c4e683c

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -54,3 +54,6 @@ add_executable(test_rs232highspeed
 		../libsrc/leddevice/LedRs232Device.cpp)
 target_link_libraries(test_rs232highspeed
 		serialport)
+
+add_executable(test_uartHighSpeed TestUartHighSpeed.cpp)
+target_link_libraries(test_uartHighSpeed ${QT_LIBRARIES})
