--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -51,9 +51,11 @@ add_executable(gpio2spi switchPinCtrl.c)
 
 add_executable(test_rs232highspeed
 		TestRs232HighSpeed.cpp
-		../libsrc/leddevice/LedRs232Device.cpp)
+		../libsrc/leddevice/LedRs232Device.cpp
+		../libsrc/leddevice/LedDeviceWs2812b.cpp)
 target_link_libraries(test_rs232highspeed
 		serialport)
 
+include_directories(/usr/include)
 add_executable(test_uartHighSpeed TestUartHighSpeed.cpp)
 target_link_libraries(test_uartHighSpeed ${QT_LIBRARIES})
