Removed bug in Hyperion.cpp and warning in TestRs232HighSpeed.cpp
Former-commit-id: 63e992a3590db5a4e2c8d121b08291588f347ac7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,8 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 set(CMAKE_BUILD_TYPE "Release")
 
 # enable C++11
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -std=c++11 -Wall")
 
 # Configure the use of QT4
 find_package(Qt4 COMPONENTS QtCore QtGui QtNetwork REQUIRED QUIET)
