--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,9 @@ cmake_minimum_required(VERSION 2.8)
 option (ENABLE_DISPMANX "Enable the RPi dispmanx grabber" ON)
 message(STATUS "ENABLE_DISPMANX = " ${ENABLE_DISPMANX})
 
+option (ENABLE_V4L2 "Enable the V4L2 grabber" ON)
+message(STATUS "ENABLE_V4L2 = " ${ENABLE_V4L2})
+
 # Createt the configuration file
 # configure a header file to pass some of the CMake settings
 # to the source code
@@ -39,7 +42,7 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 set(CMAKE_BUILD_TYPE "Release")
 
 # enable C++11
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x -Wall -g")
 
 # Configure the use of QT4
 find_package(Qt4 COMPONENTS QtCore QtGui QtNetwork REQUIRED QUIET)
