--- a/test/v4l2_to_png/CMakeLists.txt
+++ b/test/v4l2_to_png/CMakeLists.txt
@@ -4,14 +4,14 @@ find_package(Qt4 REQUIRED QtCore QtGui)
 
 include_directories(${QT_INCLUDES})
 
-add_executable(v4l_to_png
-	v4l2png.cpp
+add_executable(v4l2_to_png
+	v4l2_to_png.cpp
 	V4L2Grabber.h
 	V4L2Grabber.cpp)
 
-target_link_libraries(v4l_to_png
+target_link_libraries(v4l2_to_png
 	getoptPlusPlus)
 
-qt4_use_modules(v4l_to_png
+qt4_use_modules(v4l2_to_png
 	Core
 	Gui)
