add the new driver to the build factory and Cmake
Former-commit-id: 4d52569525137e3aa029ffa271fea076155c5a66

--- a/libsrc/leddevice/CMakeLists.txt
+++ b/libsrc/leddevice/CMakeLists.txt
@@ -55,6 +55,7 @@ if(ENABLE_SPIDEV)
 			${CURRENT_SOURCE_DIR}/LedDeviceLpd6803.h
 			${CURRENT_SOURCE_DIR}/LedDeviceLpd8806.h
 			${CURRENT_SOURCE_DIR}/LedDeviceWs2801.h
+			${CURRENT_SOURCE_DIR}/LedDeviceP9813.h
 	)
 	SET(Leddevice_SOURCES
 			${Leddevice_SOURCES}
@@ -62,6 +63,7 @@ if(ENABLE_SPIDEV)
 			${CURRENT_SOURCE_DIR}/LedDeviceLpd6803.cpp
 			${CURRENT_SOURCE_DIR}/LedDeviceLpd8806.cpp
 			${CURRENT_SOURCE_DIR}/LedDeviceWs2801.cpp
+			${CURRENT_SOURCE_DIR}/LedDeviceP9813.cpp
 	)
 endif(ENABLE_SPIDEV)
 
