Updated and addition of more tests for ws2812b control
Former-commit-id: 57078dac71173b2cb203f644e4158e179161bf17

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -66,5 +66,6 @@ if(NOT APPLE AND UNIX)
 	include_directories(/usr/include)
 	add_executable(test_uartHighSpeed TestUartHighSpeed.cpp)
 
-	add_executable(test_nonInvWs2812b TestNonInvWs2812b.cpp)
+	add_executable(test_nonUniformWs2812b TestNonUniformWs2812b.cpp)
+	add_executable(test_nonInvWs2812b     TestNonInvWs2812b.cpp)
 endif()
