--- a/config/hyperion.config.json
+++ b/config/hyperion.config.json
@@ -56,21 +56,21 @@
 				"red" :
 				{
 					"threshold"  : 0.0000,
-					"gamma"      : 2.0000,
+					"gamma"      : 1.0000,
 					"blacklevel" : 0.0000,
 					"whitelevel" : 1.0000
 				},
 				"green" :
 				{
 					"threshold"  : 0.0000,
-					"gamma"      : 2.0000,
+					"gamma"      : 1.0000,
 					"blacklevel" : 0.0000,
 					"whitelevel" : 1.0000
 				},
 				"blue" :
 				{
 					"threshold"  : 0.0000,
-					"gamma"      : 2.0000,
+					"gamma"      : 1.0000,
 					"blacklevel" : 0.0000,
 					"whitelevel" : 1.0000
 				}
@@ -348,10 +348,12 @@
 	],
 
 	/// The black border configuration, contains the following items: 
-	///  * enable : true if the detector should be activated
+	///  * enable    : true if the detector should be activated
+	///  * threshold : Value below which a pixel is regarded as black (value between 0.0 and 1.0)
 	"blackborderdetector" : 
 	{
-		"enable" : true
+		"enable" : true,
+		"threshold" : 0.01
 	},
 
 	/// The configuration of the effect engine, contains the following items: 
