--- a/config/hyperion_x86.config.json
+++ b/config/hyperion_x86.config.json
@@ -13,9 +13,9 @@
 	"device" :
 	{
 		"name"       : "MyPi",
-		"type"       : "test",
-		"output"     : "~/hyperion.test.out",
-		"rate"       : 250000,
+		"type"       : "adalight",
+		"output"     : "/dev/ttyUSB0",
+		"rate"       : 115200,
 		"colorOrder" : "rgb"
 	},
 
@@ -348,10 +348,12 @@
 	],
 
 	/// The black border configuration, contains the following items: 
-	///  * enable : true if the detector should be activated
+	///  * enable    : true if the detector should be activated
+	///  * threshold : Value below which a pixel is regarded as black (value between 0.0 and 1.0)
 	"blackborderdetector" : 
 	{
-		"enable" : true
+		"enable" : true,
+		"threshold" : 0.01
 	},
 
 	/// The configuration of the effect engine, contains the following items: 
@@ -370,6 +372,38 @@
 		"effect" : "Rainbow swirl fast",
 		"duration_ms" : 3000
 	},
+
+	///  The configuration for the frame-grabber, contains the following items: 
+	///   * width        : The width of the grabbed frames [pixels]
+	///   * height       : The height of the grabbed frames [pixels]
+	///   * frequency_Hz : The frequency of the frame grab [Hz]
+// 	"framegrabber" : 
+// 	{
+// 		"width" : 64,
+// 		"height" : 64,
+// 		"frequency_Hz" : 10.0
+// 	},
+
+	/// The configuration of the XBMC connection used to enable and disable the frame-grabber. Contains the following fields: 
+	///  * xbmcAddress       : The IP address of the XBMC-host
+	///  * xbmcTcpPort       : The TCP-port of the XBMC-server
+	///  * grabVideo         : Flag indicating that the frame-grabber is on(true) during video playback
+	///  * grabPictures      : Flag indicating that the frame-grabber is on(true) during picture show
+	///  * grabAudio         : Flag indicating that the frame-grabber is on(true) during audio playback
+	///  * grabMenu          : Flag indicating that the frame-grabber is on(true) in the XBMC menu
+	///  * grabScreensaver   : Flag indicating that the frame-grabber is on(true) when XBMC is on screensaver
+	///  * enable3DDetection : Flag indicating that the frame-grabber should switch to a 3D compatible modus if a 3D video is playing
+// 	"xbmcVideoChecker" : 
+// 	{
+// 		"xbmcAddress" : "127.0.0.1",
+// 		"xbmcTcpPort" : 9090,
+// 		"grabVideo" : true,
+// 		"grabPictures" : true,
+// 		"grabAudio" : true,
+// 		"grabMenu" : false,
+// 		"grabScreensaver" : true,
+// 		"enable3DDetection" : true
+// 	},
 
 	/// The configuration of the Json server which enables the json remote interface
 	///  * port : Port at which the json server is started
