Moved test/v4l2_to_png to src/hyperion-v4l2; Added json backend temporarily
Former-commit-id: 8c4e0ef7add8016c522d0b4c6f4df8886b905e36

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_subdirectory(hyperiond)
 add_subdirectory(hyperion-remote)
+if (ENABLE_V4L2)
+	add_subdirectory(hyperion-v4l2)
+endif (ENABLE_V4L2)
