Added coding framework for X11
Former-commit-id: 2915defe12e23d328716eade251849d40d098a8a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,14 +7,17 @@ cmake_minimum_required(VERSION 2.8)
 #set(CMAKE_TOOLCHAIN_FILE /opt/raspberrypi/Toolchain-RaspberryPi.cmake)
 
 # set the build options
-option (ENABLE_DISPMANX "Enable the RPi dispmanx grabber" ON)
-option (ENABLE_SPIDEV   "Enable the SPIDEV device" ON)
-
+option(ENABLE_DISPMANX "Enable the RPi dispmanx grabber" ON)
 message(STATUS "ENABLE_DISPMANX = " ${ENABLE_DISPMANX})
+
+option(ENABLE_SPIDEV   "Enable the SPIDEV device" ON)
 message(STATUS "ENABLE_SPIDEV   = " ${ENABLE_SPIDEV})
 
-option (ENABLE_V4L2 "Enable the V4L2 grabber" ON)
+option(ENABLE_V4L2 "Enable the V4L2 grabber" ON)
 message(STATUS "ENABLE_V4L2 = " ${ENABLE_V4L2})
+
+option(ENABLE_X11 "Enable the X11 grabber" ON)
+message(STATUS "ENABLE_X11 = " ${ENABLE_X11})
 
 # Createt the configuration file
 # configure a header file to pass some of the CMake settings
