Implemented the X11-grabber (based on v4l code).
Former-commit-id: 17ad66ff7e2a1e3fae2d853e5360f791934b6563

--- a/src/hyperion-x11/CMakeLists.txt
+++ b/src/hyperion-x11/CMakeLists.txt
@@ -10,11 +10,19 @@ find_package(Protobuf REQUIRED)
 # find Qt4
 find_package(Qt4 REQUIRED QtCore QtGui QtNetwork)
 
+# Find X11
+find_package(X11 REQUIRED)
+
 include_directories(
 	${CMAKE_CURRENT_BINARY_DIR}
 	${PROTOBUF_INCLUDE_DIRS}
 	${QT_INCLUDES}
+	${X11_INCLUDES}
 )
+
+set(Hyperion_X11_QT_HEADERS
+	ProtoWrapper.h
+	X11Wrapper.h)
 
 set(Hyperion_X11_HEADERS
 	X11Grabber.h
@@ -22,7 +30,10 @@ set(Hyperion_X11_HEADERS
 )
 
 set(Hyperion_X11_SOURCES
+	hyperion-x11.cpp
+	ProtoWrapper.cpp
 	X11Grabber.cpp
+	X11Wrapper.cpp
 	../hyperion-v4l2/ProtoConnection.cpp
 )
 
@@ -30,15 +41,16 @@ set(Hyperion_X11_PROTOS
 	${CMAKE_CURRENT_SOURCE_DIR}/../../libsrc/protoserver/message.proto
 )
 
-protobuf_generate_cpp(Hyperion_X11_PROTO_SRCS Hyperion_X11_PROTO_HDRS
-	${Hyperion_X11_PROTOS}
-)
+QT4_WRAP_CPP(Hyperion_X11_HEADERS_MOC ${Hyperion_X11_QT_HEADERS})
+
+protobuf_generate_cpp(Hyperion_X11_PROTO_SRCS Hyperion_X11_PROTO_HDRS ${Hyperion_X11_PROTOS})
 
 add_executable(hyperion-x11
 	${Hyperion_X11_HEADERS}
 	${Hyperion_X11_SOURCES}
 	${Hyperion_X11_PROTO_SRCS}
 	${Hyperion_X11_PROTO_HDRS}
+	${Hyperion_X11_HEADERS_MOC}
 )
 
 target_link_libraries(hyperion-x11
@@ -46,6 +58,7 @@ target_link_libraries(hyperion-x11
 	blackborder
 	hyperion-utils
 	${PROTOBUF_LIBRARIES}
+	${X11_LIBRARIES}
 	pthread
 )
 
