Removed use of qt4_use_modules from build files
Former-commit-id: 49860cd93e1492a2c67bd2a84bd082713a0c8e9b

--- a/libsrc/boblightserver/CMakeLists.txt
+++ b/libsrc/boblightserver/CMakeLists.txt
@@ -28,9 +28,5 @@ add_library(boblightserver
 
 target_link_libraries(boblightserver
 		hyperion
-		hyperion-utils)
-
-qt4_use_modules(boblightserver
-	Core
-	Gui
-	Network)
+        hyperion-utils
+        ${QT_LIBRARIES})
