Move V4L2 grabber code to separate library
Former-commit-id: f3003eb0142af3d085ccf93fff1b297ebc2321fc

--- a/libsrc/CMakeLists.txt
+++ b/libsrc/CMakeLists.txt
@@ -12,7 +12,4 @@ add_subdirectory(leddevice)
 add_subdirectory(utils)
 add_subdirectory(xbmcvideochecker)
 add_subdirectory(effectengine)
-
-if (ENABLE_DISPMANX)
-	add_subdirectory(dispmanx-grabber)
-endif (ENABLE_DISPMANX)
+add_subdirectory(grabber)
